{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 517,
  "lineage": "8179cc67-5ba0-e7d6-26aa-fc354873ad57",
  "resources": [
    {
      "module": "module.VPC-eu-west-2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jungle_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:186546413360:vpc/vpc-0a2db41e5077196d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/16",
            "default_network_acl_id": "acl-0c4561bf87a0c40d5",
            "default_route_table_id": "rtb-0602fbecbf70a0365",
            "default_security_group_id": "sg-0a47049aa2171ad4e",
            "dhcp_options_id": "dopt-0f37db0ed0266a012",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a2db41e5077196d5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0602fbecbf70a0365",
            "owner_id": "186546413360",
            "tags": {
              "Cluster_Name": "jungle-eks-cluster-eu-west-2",
              "Name": "jungle-vpc"
            },
            "tags_all": {
              "Cluster_Name": "jungle-eks-cluster-eu-west-2",
              "Name": "jungle-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.VPC-eu-west-2.module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jungle_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:186546413360:internet-gateway/igw-0b4218ec3b4372343",
            "id": "igw-0b4218ec3b4372343",
            "owner_id": "186546413360",
            "tags": {
              "Name": "jungle-eks-igw",
              "cluster_name": "jungle-eks-cluster-eu-west-2"
            },
            "tags_all": {
              "Name": "jungle-eks-igw",
              "cluster_name": "jungle-eks-cluster-eu-west-2"
            },
            "vpc_id": "vpc-0a2db41e5077196d5"
          },
          "dependencies": [
            "module.VPC-eu-west-2.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-eu-west-2.module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jungle_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:186546413360:route-table/rtb-01d9860853b52b4a4",
            "id": "rtb-01d9860853b52b4a4",
            "owner_id": "186546413360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4218ec3b4372343",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table",
              "eks_cluster_name": "jungle-eks-cluster-eu-west-2"
            },
            "tags_all": {
              "Name": "public-route-table",
              "eks_cluster_name": "jungle-eks-cluster-eu-west-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2db41e5077196d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-eu-west-2.aws_vpc.jungle_vpc",
            "module.VPC-eu-west-2.module.internet_gateway.aws_internet_gateway.jungle_igw"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-eu-west-2.module.route_table_association[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jungle_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ef92f1abb6894ca",
            "route_table_id": "rtb-01d9860853b52b4a4",
            "subnet_id": "subnet-04c38d3a25cbbb043"
          },
          "dependencies": [
            "module.VPC-eu-west-2.aws_vpc.jungle_vpc",
            "module.VPC-eu-west-2.module.internet_gateway.aws_internet_gateway.jungle_igw",
            "module.VPC-eu-west-2.module.route_table.aws_route_table.jungle_route_table",
            "module.VPC-eu-west-2.module.subnet.aws_subnet.jungle_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-eu-west-2.module.route_table_association[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jungle_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009d771c44ee9e691",
            "route_table_id": "rtb-01d9860853b52b4a4",
            "subnet_id": "subnet-092033fb3b014c854"
          },
          "dependencies": [
            "module.VPC-eu-west-2.module.route_table.aws_route_table.jungle_route_table",
            "module.VPC-eu-west-2.module.subnet.aws_subnet.jungle_subnet",
            "module.VPC-eu-west-2.aws_vpc.jungle_vpc",
            "module.VPC-eu-west-2.module.internet_gateway.aws_internet_gateway.jungle_igw"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-eu-west-2.module.subnet[\"subnet-1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jungle_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:186546413360:subnet/subnet-04c38d3a25cbbb043",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.0.1.0/24",
            "id": "subnet-04c38d3a25cbbb043",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "186546413360",
            "tags": {
              "Name": "terraform-eks-demo-subnet",
              "kubernetes.io/cluster/jungle-eks-cluster-eu-west-2": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-subnet",
              "kubernetes.io/cluster/jungle-eks-cluster-eu-west-2": "shared"
            },
            "vpc_id": "vpc-0a2db41e5077196d5"
          },
          "dependencies": [
            "module.VPC-eu-west-2.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-eu-west-2.module.subnet[\"subnet-2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jungle_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:186546413360:subnet/subnet-092033fb3b014c854",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.0.2.0/24",
            "id": "subnet-092033fb3b014c854",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "186546413360",
            "tags": {
              "Name": "terraform-eks-demo-subnet",
              "kubernetes.io/cluster/jungle-eks-cluster-eu-west-2": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-subnet",
              "kubernetes.io/cluster/jungle-eks-cluster-eu-west-2": "shared"
            },
            "vpc_id": "vpc-0a2db41e5077196d5"
          },
          "dependencies": [
            "module.VPC-eu-west-2.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jungle_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186546413360:vpc/vpc-0c5a1532ce6f8b2a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05dda788b9b68ab60",
            "default_route_table_id": "rtb-0034d1e588c90be7f",
            "default_security_group_id": "sg-04897132ecedbc4e9",
            "dhcp_options_id": "dopt-0d1a25e6b3e9a4646",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c5a1532ce6f8b2a2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0034d1e588c90be7f",
            "owner_id": "186546413360",
            "tags": {
              "Cluster_Name": "jungle-eks-cluster-us-east-1",
              "Name": "jungle-vpc"
            },
            "tags_all": {
              "Cluster_Name": "jungle-eks-cluster-us-east-1",
              "Name": "jungle-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jungle_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186546413360:internet-gateway/igw-0eb715c6831f4c0ef",
            "id": "igw-0eb715c6831f4c0ef",
            "owner_id": "186546413360",
            "tags": {
              "Name": "jungle-eks-igw",
              "cluster_name": "jungle-eks-cluster-us-east-1"
            },
            "tags_all": {
              "Name": "jungle-eks-igw",
              "cluster_name": "jungle-eks-cluster-us-east-1"
            },
            "vpc_id": "vpc-0c5a1532ce6f8b2a2"
          },
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jungle_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186546413360:route-table/rtb-0e93e640f891d1e22",
            "id": "rtb-0e93e640f891d1e22",
            "owner_id": "186546413360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb715c6831f4c0ef",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table",
              "eks_cluster_name": "jungle-eks-cluster-us-east-1"
            },
            "tags_all": {
              "Name": "public-route-table",
              "eks_cluster_name": "jungle-eks-cluster-us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5a1532ce6f8b2a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.jungle_vpc",
            "module.VPC-us-east-1.module.internet_gateway.aws_internet_gateway.jungle_igw"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.route_table_association[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jungle_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0133634a594d40b73",
            "route_table_id": "rtb-0e93e640f891d1e22",
            "subnet_id": "subnet-09adaab52141294f4"
          },
          "dependencies": [
            "module.VPC-us-east-1.module.internet_gateway.aws_internet_gateway.jungle_igw",
            "module.VPC-us-east-1.module.route_table.aws_route_table.jungle_route_table",
            "module.VPC-us-east-1.module.subnet.aws_subnet.jungle_subnet",
            "module.VPC-us-east-1.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.route_table_association[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jungle_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e1c218b182e48be",
            "route_table_id": "rtb-0e93e640f891d1e22",
            "subnet_id": "subnet-0fb78f19a752ce83c"
          },
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.jungle_vpc",
            "module.VPC-us-east-1.module.internet_gateway.aws_internet_gateway.jungle_igw",
            "module.VPC-us-east-1.module.route_table.aws_route_table.jungle_route_table",
            "module.VPC-us-east-1.module.subnet.aws_subnet.jungle_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.subnet[\"subnet-1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jungle_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186546413360:subnet/subnet-09adaab52141294f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09adaab52141294f4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "186546413360",
            "tags": {
              "Name": "terraform-eks-demo-subnet",
              "kubernetes.io/cluster/jungle-eks-cluster-us-east-1": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-subnet",
              "kubernetes.io/cluster/jungle-eks-cluster-us-east-1": "shared"
            },
            "vpc_id": "vpc-0c5a1532ce6f8b2a2"
          },
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC-us-east-1.module.subnet[\"subnet-2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jungle_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:186546413360:subnet/subnet-0fb78f19a752ce83c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0fb78f19a752ce83c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "186546413360",
            "tags": {
              "Name": "terraform-eks-demo-subnet",
              "kubernetes.io/cluster/jungle-eks-cluster-us-east-1": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-subnet",
              "kubernetes.io/cluster/jungle-eks-cluster-us-east-1": "shared"
            },
            "vpc_id": "vpc-0c5a1532ce6f8b2a2"
          },
          "dependencies": [
            "module.VPC-us-east-1.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_PEERING",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "jungle_vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "auto_accept": false,
            "id": "pcx-01f25e986993168e4",
            "peer_owner_id": "186546413360",
            "peer_region": "eu-west-2",
            "peer_vpc_id": "vpc-0a2db41e5077196d5",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "jungle-vpc-peering"
            },
            "tags_all": {
              "Name": "jungle-vpc-peering"
            },
            "vpc_id": "vpc-0c5a1532ce6f8b2a2"
          },
          "dependencies": [
            "module.VPC-eu-west-2.aws_vpc.jungle_vpc",
            "module.VPC-us-east-1.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC_PEERING",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-01f25e986993168e4",
            "peer_owner_id": "186546413360",
            "peer_region": "eu-west-2",
            "peer_vpc_id": "vpc-0a2db41e5077196d5",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0c5a1532ce6f8b2a2",
            "vpc_peering_connection_id": "pcx-01f25e986993168e4"
          },
          "dependencies": [
            "module.VPC-eu-west-2.aws_vpc.jungle_vpc",
            "module.VPC-us-east-1.aws_vpc.jungle_vpc",
            "module.VPC_PEERING.aws_vpc_peering_connection.jungle_vpc_peering"
          ]
        }
      ]
    }
  ]
}